--- a/rpi/GUI/mainwindow.ui
+++ b/rpi/GUI/mainwindow.ui
@@ -18,17 +18,63 @@
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="2" column="0" colspan="4">
+    <item row="4" column="0" colspan="4">
      <widget class="Line" name="line">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
      </widget>
     </item>
-    <item row="6" column="2">
-     <widget class="QLabel" name="label_3">
+    <item row="2" column="1">
+     <widget class="QSlider" name="PID_i">
+      <property name="maximum">
+       <number>100</number>
+      </property>
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="0">
+     <widget class="QLabel" name="label_4">
       <property name="text">
-       <string>De-1</string>
+       <string>Ie-1</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="0">
+     <widget class="QLabel" name="label_5">
+      <property name="text">
+       <string>Pe-1</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="1">
+     <widget class="QSlider" name="PID_p">
+      <property name="maximum">
+       <number>200</number>
+      </property>
+      <property name="singleStep">
+       <number>1</number>
+      </property>
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="2">
+     <widget class="QLabel" name="label">
+      <property name="text">
+       <string>Etat arduino</string>
+      </property>
+     </widget>
+    </item>
+    <item row="10" column="0" colspan="4">
+     <widget class="QTextBrowser" name="textBrowser">
+      <property name="font">
+       <font>
+        <pointsize>9</pointsize>
+       </font>
       </property>
      </widget>
     </item>
@@ -75,69 +121,26 @@
         <string>Drop</string>
        </property>
       </item>
+      <item>
+       <property name="text">
+        <string>ShortCircuitForward</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>ShorCircuitBackward</string>
+       </property>
+      </item>
      </widget>
     </item>
-    <item row="1" column="2">
-     <widget class="QLabel" name="label">
+    <item row="3" column="0">
+     <widget class="QLabel" name="label_3">
       <property name="text">
-       <string>Etat arduino</string>
+       <string>De-1</string>
       </property>
      </widget>
     </item>
-    <item row="8" column="0" colspan="4">
-     <widget class="QTextBrowser" name="textBrowser">
-      <property name="font">
-       <font>
-        <pointsize>9</pointsize>
-       </font>
-      </property>
-     </widget>
-    </item>
-    <item row="7" column="0" colspan="2">
-     <widget class="QGraphicsView" name="graphicsView">
-      <property name="enabled">
-       <bool>true</bool>
-      </property>
-     </widget>
-    </item>
-    <item row="4" column="3">
-     <widget class="QSlider" name="PID_i">
-      <property name="maximum">
-       <number>100</number>
-      </property>
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-     </widget>
-    </item>
-    <item row="4" column="2">
-     <widget class="QLabel" name="label_4">
-      <property name="text">
-       <string>Ie-1</string>
-      </property>
-     </widget>
-    </item>
-    <item row="3" column="3">
-     <widget class="QSlider" name="PID_p">
-      <property name="maximum">
-       <number>200</number>
-      </property>
-      <property name="singleStep">
-       <number>1</number>
-      </property>
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-     </widget>
-    </item>
-    <item row="3" column="2">
-     <widget class="QLabel" name="label_5">
-      <property name="text">
-       <string>Pe-1</string>
-      </property>
-     </widget>
-    </item>
-    <item row="6" column="3">
+    <item row="3" column="1">
      <widget class="QSlider" name="PID_d">
       <property name="maximum">
        <number>100</number>
@@ -147,8 +150,12 @@
       </property>
      </widget>
     </item>
-    <item row="1" column="0">
-     <widget class="QLCDNumber" name="lcdNumber"/>
+    <item row="9" column="0" colspan="4">
+     <widget class="QGraphicsView" name="graphicsView">
+      <property name="enabled">
+       <bool>true</bool>
+      </property>
+     </widget>
     </item>
    </layout>
   </widget>
